# passman

./: .gitignore  Cargo.toml  readme.md
.cargo/: config.toml
.github/workflows/: build_release.yml  rust.yml
src/: cli.rs  commands.rs  crypto.rs  error.rs  file_encryption.rs  gui.rs  main.rs  main_gui.rs  passman_commands.rs  passman_encryption.rs  passman_utils.rs  storage.rs
